--- a/lista03/styles/home.css
+++ b/lista03/styles/home.css
@@ -30,8 +30,7 @@ margin: 0;
     display: block;
     margin-left: auto;
     margin-right: auto ;
-    width: 70%;
-    height: 100%;
+    width: 50%;
    
 }
 
@@ -42,11 +41,48 @@ margin: 0;
     height: 100%;
 }
 
- .logo #avai {
-    display: flex;
-    flex-direction: column;
+ .logo {
+    display: inline-flex;
+    justify-content: center;
+   
+
+}
+.logo #avai{
+    width: 10%;
+    padding: 1em 2em 0.5em 5em;
     align-items: center;
 }
+
+.logo #flamengo{
+    width: 15%;
+    padding: 1em 2em 0.5em 5em;
+    align-items: center;
+    
+}
+.box{
+   
+    width: 60%;
+    height: 150%;
+    background-color: white;
+    padding: 0em 0em 2em 0em; 
+    border: 0.5rem solid;
+    border-radius: 0.5rem;
+    border-color: rgb(19, 20, 21); 
+    position: relative; 
+    margin: auto;
+    
+}
+.box.avai {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgba(0,212,255,1) 100%);
+ 
+}
+.box.flamengo{
+    background: rgb(255, 255, 255);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgb(175, 46, 46) 100%);
+    margin-top: 4em;
+}
+
 h2 {
     color: gray;
     font-size: 1.5em;
@@ -62,8 +98,14 @@ h2 {
     align: center;
     font-family: 'Dosis', sans-serif;
     text-align: justify;
- 
-     
+}
+
+.titulos{
+    display: flex;
+    flex-direction: column;
+    color: black;
+    padding: 0.5em 0.5em 0.5em 5em;
+
 }
 
 .italic{  
@@ -84,7 +126,12 @@ footer {
 }
 
 .video iframe{
-    
     justify-content: center;
+    margin-bottom: 5em;
     
 }
+
+.resumo{
+    padding-top: 2em;
+}
+
