--- a/lista03/styles/home.css
+++ b/lista03/styles/home.css
@@ -64,11 +64,10 @@ margin: 0;
     width: 60%;
     height: 150%;
     background-color: white;
-    padding: 0em 0em 2em 0em; 
-    border: 0.5rem solid;
+    padding: 0em 0em 2em 0em;
+    box-shadow: 0.2em 0.2em 0.5em 0.2em;
     border-radius: 0.5rem;
-    border-color: rgb(19, 20, 21); 
-    position: relative; 
+    position: relative;
     margin: auto;
     
 }
@@ -81,6 +80,7 @@ margin: 0;
     background: rgb(255, 255, 255);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgb(175, 46, 46) 100%);
     margin-top: 4em;
+    margin-bottom: 4rem;
 }
 
 h2 {
